added a registration link

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -137,6 +137,11 @@ label {
         <div class="text-end">
           <button type="submit" class="btn btn-custom">Log In</button>
         </div>
+
+        <p class="mt-4 text-sm">Don’t have an account?
+        <a href="/submit-supervisor" class="text-blue-600 hover:underline">Register here</a>
+        </p>
+
       </form>
     </div>
   </div>
