--- a/views/supervisorForm.ejs
+++ b/views/supervisorForm.ejs
@@ -111,18 +111,6 @@
         </div>
 
         <div class="mb-3">
-          <label for="school" class="form-label">School</label>
-          <input 
-            type="text" 
-            class="form-control" 
-            id="school" 
-            name="school" 
-            required 
-            placeholder="Enter your school name"
-          />
-        </div>
-
-        <div class="mb-3">
           <label for="department" class="form-label">Department</label>
           <input 
             type="text" 
@@ -135,14 +123,14 @@
         </div>
 
         <div class="mb-3">
-          <label for="faculty" class="form-label">Faculty</label>
+          <label for="faculty" class="form-label">Designation</label>
           <input 
             type="text" 
             class="form-control" 
-            id="faculty" 
-            name="faculty" 
+            id="designation" 
+            name="designation" 
             required 
-            placeholder="Enter your faculty"
+            placeholder="Enter your designation"
           />
         </div>
 
@@ -170,6 +158,30 @@
             required 
             placeholder="Enter your email address"
             autocomplete="email"
+          />
+        </div>
+
+        <div class="mb-3">
+          <label for="email_address" class="form-label">Name Of Organization</label>
+          <input 
+            type="email" 
+            class="form-control" 
+            id="name_of_organization" 
+            name="name_of_organization" 
+            required 
+            placeholder="Enter your organization's name"
+          />
+        </div>
+
+        <div class="mb-3">
+          <label for="email_address" class="form-label">Office Address</label>
+          <input 
+            type="email" 
+            class="form-control" 
+            id="office_address" 
+            name="office_address" 
+            required 
+            placeholder="Enter your office address"
           />
         </div>
 
