--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -49,18 +49,13 @@
         </div>
 
         <div>
-          <label class="block text-gray-700 font-medium mb-1">School</label>
-          <input type="text" value="<%= user.School %>" readonly class="w-full border border-gray-200 rounded px-3 py-2 bg-gray-100 text-gray-500 focus:outline-none focus:ring-2 focus:ring-orange-500" />
-        </div>
-
-        <div>
           <label class="block text-gray-700 font-medium mb-1">Department</label>
           <input type="text" value="<%= user.Department %>" readonly class="w-full border border-gray-200 rounded px-3 py-2 bg-gray-100 text-gray-500 focus:outline-none focus:ring-2 focus:ring-orange-500" />
         </div>
         
         <div>
-          <label class="block text-gray-700 font-medium mb-1">Faculty</label>
-          <input type="text" value="<%= user.Faculty %>" readonly class="w-full border border-gray-200 rounded px-3 py-2 bg-gray-100 text-gray-500 focus:outline-none focus:ring-2 focus:ring-orange-500" />
+          <label class="block text-gray-700 font-medium mb-1">Designation</label>
+          <input type="text" value="<%= user.Designation %>" readonly class="w-full border border-gray-200 rounded px-3 py-2 bg-gray-100 text-gray-500 focus:outline-none focus:ring-2 focus:ring-orange-500" />
         </div>
 
         <div>
@@ -71,6 +66,16 @@
         <div>
           <label class="block text-gray-700 font-medium mb-1">Email Address</label>
           <input type="email" value="<%= user.Email_Address %>" readonly class="w-full border border-gray-200 rounded px-3 py-2 bg-gray-100 text-gray-500 focus:outline-none focus:ring-2 focus:ring-orange-500" />
+        </div>
+
+        <div>
+          <label class="block text-gray-700 font-medium mb-1">Name Of Organization</label>
+          <input type="text" value="<%= user.Name_Of_Organization %>" readonly class="w-full border border-gray-200 rounded px-3 py-2 bg-gray-100 text-gray-500 focus:outline-none focus:ring-2 focus:ring-orange-500" />
+        </div>
+
+        <div>
+          <label class="block text-gray-700 font-medium mb-1">Office Address</label>
+          <input type="text" value="<%= user.Office_Address %>" readonly class="w-full border border-gray-200 rounded px-3 py-2 bg-gray-100 text-gray-500 focus:outline-none focus:ring-2 focus:ring-orange-500" />
         </div>
 
       </div>
