implemented forgot password option

--- a/views/createPassword.ejs
+++ b/views/createPassword.ejs
@@ -105,6 +105,8 @@ label {
   <div class="form-wrapper">
     <form id="passwordForm" action="/create-password" method="POST" class="bg-white p-4 rounded shadow-sm" novalidate>
       <input type="hidden" name="email" value="<%= email %>" />
+        <input type="hidden" name="mode" value="<%= mode %>" />
+
 
       <div class="mb-3">
         <label for="create_password" class="form-label">Create Password</label>
